--- a/src/sass/searchEngine.scss
+++ b/src/sass/searchEngine.scss
@@ -3,12 +3,38 @@
   max-width: 1000px;
   margin-bottom: 50px;
 
-  form {
-    width: 60%;
-    margin: 0 auto;
+  @media (max-width: 500px) {
+    width: 95%;
 
   }
 
+  form {
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+
+    @media (max-width: 850px) {
+     flex-wrap: wrap;
+      justify-content: center;
+
+    }
+    @media (max-width: 500px) {
+      width: 100%;
+
+    }
+  }
+
+  // input style
+
+  label{
+    position: relative;
+    width: 80%;
+
+    @media (max-width: 850px) {
+      width: 100%;
+
+    }
+  }
   input::-webkit-calendar-picker-indicator {
     display: none;
   }
@@ -16,6 +42,7 @@
   input {
     height: 60px;
     width: 100%;
+    min-width: 300px;
     padding: 12px 24px;
     background-color: transparent;
     transition: transform 250ms ease-in-out;
@@ -31,6 +58,11 @@
     transition: all 250ms ease-in-out;
     backface-visibility: hidden;
     transform-style: preserve-3d;
+
+    @media (max-width: 850px) {
+      margin-bottom: 10px;
+
+    }
 
     &::placeholder {
       color: $secondaryColor;
@@ -49,31 +81,52 @@
     }
   }
 
-  .buttons {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
 
-    button {
-      display: block;
-      background-color: transparent;
-      outline: none;
-      border: 1px solid #575756;
-      border-radius: 50px;
-      text-transform: uppercase;
-      color: $secondaryColor;
-      padding: 5px 10px;
+  // buttons style
 
-      &:hover {
-        background-color: #575756;
-        color: $primaryColor;
-      }
+  button {
+    display: block;
+    background-color: transparent;
+    outline: none;
+    border: 1px solid $secondaryColor;
+    border-radius: 50px;
+    text-transform: uppercase;
+    color: $secondaryColor;
+    padding: 5px 10px;
+    transition: .1s;
 
+    &:hover {
+      background-color: $secondaryColor;
+      color: $primaryColor;
     }
 
 
+  }
+  .add-btn {
+    font-size: 45px;
+    font-weight: 300;
+    height: 60px;
+    width: 60px;
+    min-width: 60px;
+    margin: 0 10px;
+
+    &:hover{
+
+    }
 
   }
+
+  .search-btn{
+    font-size: 16px;
+    width: 18%;
+    min-width: 100px;
+
+
+  }
+
+
+  // List of ingredients
+
   .added-list {
     margin-top: 30px;
     list-style: none;
@@ -81,25 +134,26 @@
     justify-content: center;
     height: 40px;
     flex-wrap: wrap;
+    padding: 0;
 
-    li{
+
+    li {
+      color: $primaryColor;
+      background-color: $secondaryColor;
       font-size: 16px;
       margin: 5px;
-      border: 1px solid $secondaryColor;
       border-radius: 50px;
       padding: 5px 15px;
       display: flex;
       justify-content: center;
       align-items: center;
+      cursor: pointer;
 
-      span{
-        margin-right: 5px;
-      }
-
-
-
+    &:hover{
+      background-color:firebrick;
     }
 
+    }
 
 
   }
