--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap&subset=latin-ext');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,300,400,600,700&display=swap');
 @import "./sass/variables";
 @import "./sass/searchEngine";
 @import "./sass/loader";
@@ -39,13 +39,13 @@ body {
 
   }
 
-  @media (max-width:420px) {
-    font-size:40px;
+  @media (max-width: 420px) {
+    font-size: 40px;
 
 
   }
-  @media (max-width:320px) {
-    font-size:35px;
+  @media (max-width: 320px) {
+    font-size: 35px;
 
 
   }
@@ -61,70 +61,110 @@ body {
   flex-wrap: wrap;
 
   .recipes-el {
+    display: grid;
+    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-columns: 90px 1fr;
     position: relative;
-    text-align: center;
     margin: 10px;
-    width: 250px;
-    min-width: 250px;
-    border-radius: 10px;
+    width: 350px;
+    min-width: 350px;
     overflow: hidden;
     color: lighten($secondaryColor, 10%);
-    height: 300px;
+    height: 200px;
     background-color: darken($primaryColor, 5%);
-    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.5);
-    //border: 1px solid $secondaryColor;
+    box-shadow:2px 2px 5px 0 rgba(0, 0, 0, 0.5);
+    transition: .1s;
+
+    &:hover{
+      transform: scale(1.05);
+    }
+
+
+    @media (max-width: 350px) {
+      width: 100%;
+      min-width: 100%;
+      z-index: 5;
+    }
 
 
     img {
-      margin-top: 10px;
-      //border: 1px solid $secondaryColor;
+      grid-area: 2/1/3/2;
+      height: 100px;
+      width: 100px;
+      margin-left: 10px;
     }
 
-    h3{
-      margin: 5px 0;
-      vertical-align: top;
-      font-weight: 800;
-      color: darken($secondaryColor,10%);
-    }
-
-
-    ul  {
+    h3 {
+      font-size: 16px;
+      grid-area: 1/1/2/3;
       display: flex;
-      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 5px;
+      height: 75%;
+      width: 100%;
+      margin: 0 auto;
+      font-weight: 400;
+      font-family: 'Raleway', sans-serif;
+      color: $primaryColor;
+      background-color: lighten($secondaryColor,10%);
+      backface-visibility: hidden;
+
+    }
+
+
+    ul {
+      grid-area: 2/2/3/3;
+      margin-left: 40px;
       list-style: none;
       padding: 0;
       max-height: 100px;
       overflow-y: scroll;
+      font-family: 'Raleway', sans-serif;
+      backface-visibility: hidden;
 
-      span{
-        font-weight:800;
+
+
+      span {
+        font-weight: 600;
+        font-size: 16px;
+
+
       }
 
       &::-webkit-scrollbar {
         display: none;
       }
 
-      li{
-        font-size: 14px;
+      li {
+        font-size: 15px;
         margin-right: 5px;
         border-radius: 50px;
         padding: 0 5px;
-
-
       }
 
     }
-    a{
-      text-decoration: none;
-      color: $primaryColor;
-      background-color: lighten($secondaryColor, 10%);;
-      border-radius: 50px;
-      padding: 2px 10px;
-      position: absolute;
-      transform: translate(-50%, -30%);
 
-      &:hover{
-        background-color: $secondaryColor;
+    a {
+      grid-area: 3/1/4/3;
+      margin: 10px auto;
+      display: flex;
+      justify-content: center;
+      padding: 0 10px;
+      align-items: center;
+      text-decoration: none;
+      font-size: 13px;
+      height: 25px;
+      color: $secondaryColor;
+      border: 1px solid $secondaryColor;
+      border-radius: 50px;
+      text-transform: uppercase;
+      transition: .2s;
+
+      &:hover {
+        background-color:lighten($secondaryColor,10%);
+        color: $primaryColor;
       }
     }
 
