--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,7 @@ body {
 
   @media (max-width: 650px) {
     font-size: calc(50px + 0.5vw);
+    margin-top: 20px;
 
 
   }
@@ -60,6 +61,12 @@ body {
   justify-content: center;
   flex-wrap: wrap;
 
+  @media (max-width: 350px) {
+    width: 90%;
+  }
+
+
+
   .recipes-el {
     display: grid;
     grid-template-rows: 1fr 2fr 1fr;
@@ -71,6 +78,7 @@ body {
     overflow: hidden;
     color: lighten($secondaryColor, 10%);
     height: 200px;
+    min-height: 200px;
     background-color: darken($primaryColor, 5%);
     box-shadow:2px 2px 5px 0 rgba(0, 0, 0, 0.5);
     transition: .1s;
@@ -83,7 +91,6 @@ body {
     @media (max-width: 350px) {
       width: 100%;
       min-width: 100%;
-      z-index: 5;
     }
 
 
