--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,2 +1,2 @@
-$primaryColor: #EAE7DC; //#F7CAC9 , #ffde6b, #EAE7DC, #D2C5B4
-$secondaryColor: #333; // #306556, #FF531D
+$primaryColor: #EAE7DC;
+$secondaryColor: #333;
