--- a/src/sass/searchEngine.scss
+++ b/src/sass/searchEngine.scss
@@ -98,12 +98,17 @@
   }
 
   .add-btn {
-    font-size: 45px;
-    font-weight: 300;
     height: 60px;
     width: 60px;
     min-width: 60px;
     margin: 0 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    svg{
+      font-size: 24px !important;
+    }
   }
 
   .search-btn {
